# nexus-alpha

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backtest_matrix_results.json  docker-compose.yml  logs.txt  nexusctl.sh  pyproject.toml  scratch_causal.py
.github/workflows/: ci.yml  monitoring_images.yml  promotion_simulation.yml  safe_retrain_smoke.yml
artifacts/: v9_stress_report.json
cicd/: background_runner.sh
config/: production_inputs.example.yaml  production_inputs.yaml
dashboard/: index.html
dashboard/backend/: main.py
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/frontend/src/: App.tsx
dashboard/frontend/src/components/commander/: BotControls.tsx  EfficiencyCard.tsx  HeroCard.tsx  IntegrityCard.tsx  KpiGrid.tsx  TournamentChart.tsx
dashboard/frontend/src/components/layout/: AppShell.tsx  LiveStrip.tsx  RailNav.tsx  TopBar.tsx
dashboard/frontend/src/components/shared/: InlineMeter.tsx  LiveDot.tsx  NoiseLayer.tsx  NumberMorph.tsx  Panel.tsx  Sparkline.tsx
dashboard/frontend/src/hooks/: useHeartbeat.ts
dashboard/frontend/src/lib/: api.ts  fmt.ts  queries.ts  ws.ts
dashboard/frontend/src/pages/: Analytics.tsx  Commander.tsx  Genealogy.tsx  Journal.tsx  Terminal.tsx
dashboard/frontend/src/styles/: globals.css
data/: bot_control.json
data/backtests/: walk_forward_summary.json
data/backtests/walk_forward/: ADA_USDT_1d.json  ADA_USDT_1h.json  ADA_USDT_4h.json  BNB_USDT_1d.json  BNB_USDT_1h.json  BNB_USDT_4h.json  BTC_USDT_1d.json  BTC_USDT_1h.json  BTC_USDT_4h.json  ETH_USDT_1d.json  ETH_USDT_1h.json  ETH_USDT_4h.json  SOL_USDT_1d.json  SOL_USDT_1h.json  SOL_USDT_4h.json
data/optimization/: best_params_BTC_USDT.json  optuna.db
data/rft/: trajectories.jsonl
data/tournament/: registry.json  swarm_registry.json  test_registry.json  v9_stress_registry.json
data/trade_logs/: portfolio_state.json
docs/: production_handover.md
docs/runbooks/: production_readiness.md
freqtrade/config/: config.json
freqtrade/strategies/: NexusAlphaStrategy.py
infra/: k8s-deployment.yml  prometheus.yml
infra/maintenance/: timescale_maintenance.py
infra/monitoring/: Dockerfile.metrics_server  Dockerfile.ollama_monitor  Dockerfile.telegram_forwarder  README.md  RUNBOOK.md  alert_rules.yml  docker-compose.yml  grafana_nexus_dashboard.json  import_grafana_dashboard.py  install_systemd_units.sh  metrics_server.py  ollama_env_defaults.env  ollama_prometheus_exporter.py  prometheus_scrape.yml  validate_env.py
infra/monitoring/alertmanager/: alertmanager.yml  telegram_forwarder.py
infra/monitoring/systemd/: docker-services.service  metrics_server.service  ollama_monitor.service  post_eval_watcher.service  telegram_forwarder.service
infra/self_healing/: README.md  ollama_monitor.py  post_eval_watcher.py  retrain-watcher.service  retrain_watcher.py  safe_retrain.py  watchdog.py
nexus_alpha/: __init__.py  cli.py  config.py  logging.py  schema_types.py  types.py
nexus_alpha/agents/: archetypes.py  debate.py  evolution.py  lifecycle.py  meta.py  optimizer.py  risk.py  rl_agent.py  tournament.py
nexus_alpha/alerts/: __init__.py  telegram.py
nexus_alpha/api/: __init__.py  health.py
nexus_alpha/autonomous/: god_loop.py  stress_test.py  tournament.py
nexus_alpha/backtesting/: engine.py
nexus_alpha/core/: causal_validator.py  meta_learning.py  regime_oracle.py  trading_loop.py  world_model.py
nexus_alpha/data/: __init__.py  consumer.py  contracts.py  feature_store.py  features.py  free_sources.py  ingestion.py  kafka_admin.py  live_ingestor.py  quality.py  reddit_client.py  sentiment_pipeline.py  streaming.py
nexus_alpha/execution/: benchmark.py  contracts.py  execution_engine.py  lob_sim_env.py  rl_execution_agent.py
nexus_alpha/infrastructure/: adversarial.py  explainability.py  operations.py  rollout.py  self_healing.py
nexus_alpha/intelligence/: contracts.py  crawl4ai_agents.py  foundation.py  free_llm.py  microstructure.py  openclaw_agents.py  openclaw_pipeline.py  sentiment.py
nexus_alpha/learning/: __init__.py  causality.py  entry_features.py  guardian.py  historical_data.py  memory.py  offline_trainer.py  regime_detector.py  rft_vault.py  rl_environment.py  signal_optimizer.py  tournament_engine.py  trade_logger.py  walk_forward.py
nexus_alpha/monitoring/: metrics.py
nexus_alpha/portfolio/: optimizer.py
nexus_alpha/risk/: circuit_breaker.py  contracts.py  firewall.py  position_sizer.py
nexus_alpha/signals/: alpha_microstructure.py  alpha_sentiment.py  base.py  contracts.py  correlation.py  microstructure_l2.py  multimodal_fusion.py  signal_engine.py
nexus_alpha/strategy/: evolution.py
scratch/: test_phase8.py  test_stability.py  testnet_verify.py
scripts/: decrypt-env.sh  encrypt-env.sh  export_trajectories.sh  init_tournament.py  nexus_art_trainer.ipynb  preflight.py  promote_champion.py  run_backtest_matrix.py  start_trading.sh  test_v4_efficiency.py  train_execution_rl.py  validate_production_readiness.py  verify_memory.py  verify_rft.py
tests/integration/: conftest.py  test_feature_streaming_harness.py  test_kafka_streaming_path.py
tests/unit/: conftest.py  test_agent_lifecycle.py  test_backtest_matrix.py  test_backtesting_engine.py  test_config_and_cli.py  test_data_pipeline.py  test_data_quality_monitor.py  test_e2e_paper_trading.py  test_execution_benchmark.py  test_execution_router.py  test_feature_store.py  test_feature_worker.py  test_free_stack.py  test_health_api.py  test_intelligence_foundation.py  test_online_learning.py  test_openclaw_llm.py  test_openclaw_pipeline.py  test_operations_rollout.py  test_promotion_simulation.py  test_reddit_client.py  test_risk_firewall.py  test_safe_retrain.py  test_streaming_loop.py  test_trading_loop.py  test_walk_forward.py
