[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexus-alpha"
version = "3.0.0"
description = "NEXUS-ALPHA: Self-Evolving Autonomous Trading Intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # === Core ML / Deep Learning ===
    "torch>=2.3.0",
    "pytorch-lightning>=2.2.0",
    "pytorch-forecasting>=1.1.0",

    # === Reinforcement Learning ===
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",

    # === Genetic Programming / Evolutionary ===
    "deap>=1.4.1",

    # === Causal Inference ===
    "dowhy>=0.11.0",
    "lingam>=1.8.0",

    # === Classical ML ===
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",

    # === Data / Time Series ===
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",

    # === Explainability ===
    "shap>=0.45.0",

    # === Hyperparameter Optimization ===
    "optuna>=3.6.0",

    # === MLOps ===
    "mlflow>=2.12.0",

    # === API / Async ===
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # === Message Queue / Streaming ===
    "confluent-kafka>=2.4.0",
    "aiokafka>=0.10.0",

    # === Database ===
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",

    # === Observability ===
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",

    # === Configuration ===
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # === Crypto Exchange Clients ===
    "ccxt>=4.3.0",

    # === NLP / LLM ===
    "anthropic>=0.25.0",
    "tiktoken>=0.7.0",

    # === Utilities ===
    "click>=8.1.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
nexus = "nexus_alpha.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_alpha*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
